--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
                 <li><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Contact Us</a></li>
+                <li id="box-cart"><i class='bx bx-cart'></i><a href="#"></a></li>
+                <li id="box-menu"><i class='bx bx-menu'></i><a href="#"></a></li>
             </ul>
         </nav>
-        
 
     </header>
     
