--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
 
     <header>
         
-            <ul id="navigation">
-
-                <li id="logo"><i class='bx bx-headphone'></i><a href="#">SOUNDBOX</a></li>
-                
+        <li id="logo"><i class='bx bx-headphone'></i><a href="#">SOUNDBOX</a></li>
+<nav>
+            <ul id="navigation"></ul>
                 <li><a href="#">General View</a></li>
                 <li><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
+</nav>
 
             <div id="header-icon">
                 <i class='bx bx-cart'></i>
