--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 id="logo"><i class='bx bx-headphone'></i>SOUNDBOX</h1>
         
 <nav>
-            <ul id="navigation"></ul>
+            <ul id="navigation">
                 <li><a href="#">General View</a></li>
                 <li><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
