--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
 </nav>
         
     </header>
+
+    <section id="home">
+        <div id="home-img">
+            <img src="" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
