--- a/index.html
+++ b/index.html
@@ -46,8 +46,16 @@
 
     <section id="home">
         <div id="home-img">
-            <img src="" alt="">
+            <img src="images/headbluelarge.png"    alt="Blue HeadPhones">
         </div>
+
+        <div id="home-text">
+            <h2>Wireless <br> HeadPhones</h2>
+            <p>The Smarter way to listen</p>
+            <p>$129.00</p>
+            <a href="#" id="blue">Shop Now</a>
+        </div>
+        
     </section>
     
 </body>
