--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
             <h2>Wireless <br> HeadPhones</h2>
             <p>The Smarter way to listen</p>
             <h3>$129.00</h3>
-            <a href="#" id="blue">Shop Now</a>
+            <a href="#" id="buttom">Shop Now</a>
         </div>
 
     </section>
+
+    <ul id="main">
+        <li><img src="images/headblue.png" alt="HeadPhone blue reference" onclick="slider('headbluelarge')"></li>
+        <li><img src="images/headblack.png" alt="HeadPhone white reference" onclick="slider('headblacklarge')"></li>
+        <li><img src="images/headwhite.png" alt="HeadPhone white reference" onclick="slider('headwhitelarge')"></li>
+    </ul>
     
 </body>
 </html>
