--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     </section>
 
     <ul id="main">
-        <li><img src="images/headblue.png" alt="HeadPhone blue reference" onclick="slider('headbluelarge')"></li>
-        <li><img src="images/headblack.png" alt="HeadPhone white reference" onclick="slider('headblacklarge')"></li>
-        <li><img src="images/headwhite.png" alt="HeadPhone white reference" onclick="slider('headwhitelarge')"></li>
+        <li id="blue"><img src="images/headblue.png" alt="HeadPhone blue reference" onclick="slider('headbluelarge')"></li>
+        <li id="black"><img src="images/headblack.png" alt="HeadPhone white reference" onclick="slider('headblacklarge')"></li>
+        <li id="white"><img src="images/headwhite.png" alt="HeadPhone white reference" onclick="slider('headwhitelarge')"></li>
     </ul>
     
 </body>
