--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet"
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 
-    <link rel="stylesheet" href="mystyles/style.css">
+    <link rel="stylesheet" href="mystyles/style.css" media="all">
 
 </head>
 <body>
