--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Commerce Head Phones</title>
 
+    <link rel="stylesheet" href="mystyles/style.css" media="all">
+    <link rel="stylesheet" href="mystyles/mediaquery.css">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,500;0,900;1,600&display=swap" rel="stylesheet">
@@ -14,8 +17,6 @@
     <!-- or -->
     <link rel="stylesheet"
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
-
-    <link rel="stylesheet" href="mystyles/style.css" media="all">
 
 </head>
 <body>
