--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h1 id="logo"><i class='bx bx-headphone'></i>SOUNDBOX</h1>
         
 <nav>
-            <ul id="navigation">
-                <li><a href="#">General View</a></li>
-                <li><a href="#">Teach Spec</a></li>
+            <ul>
+                <li class="navigation"><a href="#">General View</a></li>
+                <li class="navigation"><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
