--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         
 <nav>
             <ul>
-                <li class="navigation"><a href="#">General View</a></li>
-                <li class="navigation"><a href="#">Teach Spec</a></li>
+                <li><a href="#">General View</a></li>
+                <li><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
                 <li><a href="#">Contact Us</a></li>
             </ul>
