--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,7 +26,7 @@
         <h1 id="logo"><i class='bx bx-headphone'></i>SOUNDBOX</h1>
         
 <nav>
-            <ul>
+            <ul id="navigation">
                 <li><a href="#">General View</a></li>
                 <li><a href="#">Teach Spec</a></li>
                 <li><a href="#">Reviews</a></li>
