--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="logo"><i class='bx bx-headphone'></i>Soundbox</a>
 
         <ul id="navigation">
-            <li><a href="#">Visão geral</a></li>
+            <li><a href="#">General View</a></li>
             <li><a href="#">Teach Specs</a></li>
             <li><a href="#">Reviews</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -42,9 +42,9 @@
         <div class="home-text">
 
             <h1>Wireless <br> Headphones</h1>
-            <h5>The Smarter way to listen</h5>
+            <p>The Smarter way to listen</p>
             <h3>$139.00</h3>
-            <a href="#" class="btn">Shop Now</a>
+            <a href="#" class="buttom">Shop Now</a>
 
         </div><!--home-text-->
     </section><!--home-->
