--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo"><i class='bx bx-headphone'></i>Soundbox</a>
+        <a href="#" id="logo"><i class='bx bx-headphone'></i>Soundbox</a>
 
         <ul id="navigation">
             <li><a href="#">General View</a></li>
