--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <section class="home">
         <div class="home-img">
-            <img src="images/headbluelarge.png" class="one">
+            <img src="images/headbluelarge.png" id="one">
         </div><!--home-img-->
 
         <div class="home-text">
@@ -60,7 +60,7 @@
         </div><!--row2-->
 
         <div class="row3">
-            <li><img src="images/headwhite.png" onclick="slider('headwhite.png')"></li>
+            <li><img src="images/headwhite.png" onclick="slider('headblack.png')"></li>
         </div><!--row3-->
     </div><!--main-->
 
