--- a/index.html
+++ b/index.html
@@ -4,23 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+
     <link rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet"
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
+
+
+    <link rel="stylesheet" href="mystyles/mobilestyles.css" media="all">
+    <link rel="stylesheet" href="mystyles/allstyle.css">
+    <link rel="shortcut icon" href="xxxxxxxxxxxxxxxxxxxxxxx" type="image/x-icon">
+
     <title>E-Commerce Headphones</title>
 </head>
 <body>
 
     <header>
-        <a href="#" id="logo"><i class='bx bx-headphone'></i>Soundbox</a>
+        <div id="solo">
+            <i id="logo" class='bx bx-headphone'></i>
+            <h1>Soundbox</h1>
+        </div>
 
+        <menu>
+            <i id="cart" class='bx bx-cart'></i>
+            <i id="menu" class='bx bx-menu'></i>
+            
         <ul id="navigation">
             <li><a href="#">General View</a></li>
             <li><a href="#">Teach Specs</a></li>
@@ -28,10 +46,7 @@
             <li><a href="#">Contact Us</a></li>
         </ul><!--navegação-->
 
-        <div class="header-icons">
-            <i class='bx bx-cart'></i>
-            <div id="menu"><i class='bx bx-menu'></i></div>
-        </div><!--header-icons-->
+        </menu>
     </header>
 
     <section class="home">
