--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
             <i id="cart" class='bx bx-cart'></i>
-            <i id="burguer" class='bx bx-menu' onclick="click()"></i>
+            <i id="burguer" class='bx bx-menu' onclick="clickMenu()"></i>
          
         <menu id="itens">
         <ul>
@@ -80,8 +80,8 @@
     </div><!--main-->
 
     <script>
-        function clickMenu(){
-          navigation.style.display = 'block';
+        function clickMenu() {
+          itens.style.display = 'block'
 
         }
     </script>
