--- a/index.html
+++ b/index.html
@@ -81,8 +81,11 @@
 
     <script>
         function clickMenu() {
-          itens.style.display = 'block'
-
+            if (itens.style.display =='block'){
+                itens.style.display = 'none'
+            } else {
+                itens.style.display = 'block'
+            }
         }
     </script>
 
