--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 
     <script>
         function clickMenu() {
-            if (itens.style.display =='block'){
-                itens.style.display = 'none'
-            } else {
+            if (itens.style.display =='none'){
                 itens.style.display = 'block'
+            } else {
+                itens.style.display = 'none'
             }
         }
     </script>
