--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 
         <i id="cart" class='bx bx-cart'></i>
 
-        <div id="burguer">
-            <i class='bx bx-menu' onclick="clickMenu()"></i>
+        <div id="fix">
+            <i id="burguer" class='bx bx-menu' onclick="clickMenu()"></i>
         </div>
 
     <menu id="itens">
