--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
             <h1>Soundbox</h1>
         </div>
 
-        <i id="cart" class='bx bx-cart'></i>
+        <div>
+            <i id="cart" class='bx bx-cart'></i>
+        </div>
 
         <div id="fix">
             <i id="burguer" class='bx bx-menu' onclick="clickMenu()"></i>
