--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 <body>
 
     <header>
-        <div id="solo">
+        <div class="logo">
             <i id="logo" class='bx bx-headphone'></i>
             <h1>Soundbox</h1>
         </div>
 
-        <div>
+        <div class="cart">
             <i id="cart" class='bx bx-cart'></i>
         </div>
 
-        <div id="fix">
+        <div class="burguer">
             <i id="burguer" class='bx bx-menu' onclick="clickMenu()"></i>
         </div>
 
@@ -55,19 +55,15 @@
     </menu>
     </header>
 
-    <section class="home">
-        <div class="home-img">
-            <img src="images/headbluelarge.png" id="one">
-        </div><!--home-img-->
+    <section>
+        <div>
 
-        <div class="home-text">
-
-            <h1>Wireless <br> Headphones</h1>
+            <h2>Wireless <br> Headphones</h2>
             <p>The Smarter way to listen</p>
             <h3>$139.00</h3>
-            <a href="#" class="buttom">Shop Now</a>
+            <a href="#" id="buttom">Shop Now</a>
 
-        </div><!--home-text-->
+        </div>
     </section>
 
 
