--- a/index.html
+++ b/index.html
@@ -54,32 +54,25 @@
         </nav>
     </menu>
     </header>
+    
+    <div class="main">
+        <ul>
+            <li id="row1"><img src="images/headblue.png"></li>
+
+            <li id="row2"><img src="images/headblack.png"></li>
+
+            <li id="row3"><img src="images/headwhite.png"></li>
+        </ul>
+    </div>
 
     <section>
-        <div>
-
+        <div class="home">
             <h2>Wireless <br> Headphones</h2>
             <p>The Smarter way to listen</p>
             <h3>$139.00</h3>
-            <a href="#" id="buttom">Shop Now</a>
-
+            <a href="#">Shop Now</a>
         </div>
     </section>
-
-
-    <div class="main">
-        <div class="row">
-            <li><img src="images/headblue.png" onclick="slider('headblue.png')"></li>
-        </div><!--row-->
-
-        <div class="row2">
-            <li><img src="images/headblack.png" onclick="slider('headblack.png')"></li>
-        </div><!--row2-->
-
-        <div class="row3">
-            <li><img src="images/headwhite.png" onclick="slider('headblack.png')"></li>
-        </div><!--row3-->
-    </div><!--main-->
 
     <script>
         function clickMenu() {
