--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <title>E-Commerce Headphones</title>
 </head>
-<body>
+<body onresize="changeSize()">
 
     <header>
         <div class="logo">
@@ -75,6 +75,13 @@
     </section>
 
     <script>
+        function changeSize() {
+            if (window.innerWidth >= 768) {
+            itens.style.display = 'block'
+        } else {
+            itens.style.display = 'none'
+        }  
+    }
         function clickMenu() {
             if (itens.style.display =='block'){
                 itens.style.display = 'none'
