--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
         <ul>
             <li id="row1"><img src="images/headblue.png"></li>
 
+        <div id="wire">
+            <p>Wirelles HeadPhones</p>
+        </div>
+
             <li id="row2"><img src="images/headblack.png"></li>
 
             <li id="row3"><img src="images/headwhite.png"></li>
