--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
     <div class="main">
         <ul>
             <li id="row1"><img src="images/headblue.png"></li>
-
-        <div id="wire">
-            <p>Wirelles HeadPhones</p>
-        </div>
+            <p id="wire">Wirelles HeadPhones</p>
 
             <li id="row2"><img src="images/headblack.png"></li>
 
