--- a/index.html
+++ b/index.html
@@ -57,12 +57,21 @@
     
     <div class="main">
         <ul>
+        <div id="heads">
             <li id="row1"><img src="images/headblue.png"></li>
-            <p id="wire">Wirelles HeadPhones</p>
+            <p>Wirelles HeadPhones</p>
+        </div>
 
+        <div id="buds">
             <li id="row2"><img src="images/headblack.png"></li>
+            <p>EarBubs</p>
+        </div>
 
+        <div id="micros"> 
             <li id="row3"><img src="images/headwhite.png"></li>
+            <p>MicroPhones</p>
+        </div>
+    
         </ul>
     </div>
 
