--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <ul>
         <div id="heads">
             <li id="row1"><img src="images/headblue.png"></li>
-            <p>Wirelles HeadPhones</p>
+            <p id="blue">Wirelles HeadPhones</p>
         </div>
 
         <div id="buds">
@@ -71,7 +71,6 @@
             <li id="row3"><img src="images/headwhite.png"></li>
             <p>MicroPhones</p>
         </div>
-    
         </ul>
     </div>
 
