--- a/index.html
+++ b/index.html
@@ -44,14 +44,17 @@
         </div>
 
     <menu id="itens">
-        <nav>
-            <ul>
-                <li><a href="#">General View</a></li>
-                <li><a href="#">Teach Specs</a></li>
-                <li><a href="#">Reviews</a></li>
-                <li><a href="#">Contact Us</a></li>
-            </ul>
-        </nav>
+        <div id="container">
+            <nav>
+                <ul>
+                    <li><a href="#">General View</a></li>
+                    <li><a href="#">Teach Specs</a></li>
+                    <li><a href="#">Reviews</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
+        
     </menu>
     </header>
     
