--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
         </div>
 
     <menu id="itens">
-        <div id="container">
             <nav>
                 <ul>
-                    <li><a href="#">General View</a></li>
-                    <li><a href="#">Teach Specs</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <div id="container">
+<li><a class="button link" href="#">General View</a></li>
+<li><a class="button link" href="#">Teach Specs</a></li>
+<li><a class="button link" href="#">Reviews</a></li>
+<li><a class="button link" href="#">Contact Us</a></li>
+                    </div>
                 </ul>
             </nav>
-        </div>
         
     </menu>
     </header>
