--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 
         <div id="buds">
             <li id="row2"><img src="images/headblack.png"></li>
-            <p>EarBubs</p>
+            <p id="pink">EarBubs</p>
         </div>
 
         <div id="micros"> 
             <li id="row3"><img src="images/headwhite.png"></li>
-            <p>MicroPhones</p>
+            <p id="yellow">MicroPhones</p>
         </div>
         </ul>
     </div>
