--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
 
         <div id="buds">
-            <li id="row2"><img src="images/headblack.png"></li>
+            <li id="row2"><img src="images/"></li>
             <p id="pink">EarBubs</p>
         </div>
 
