--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
     </menu>
 </header>      
 
+<section id="cover">
     <div class="main">
         <img id="row1" onclick="clickblue()" src="./images/headblue.png" alt="Head Phone Blue">
 
@@ -59,16 +60,17 @@
 
         <img id="row3" onclick="clickwhite()" src="./images/headwhite.png" alt="Head Phone White">
     </div>
+
+    <div id="cover">
+        <img id="back" src="images/headbluelarge.png" alt="Head Phone Blue Large">
+    </div>
+</section>
            
 <section id="home">
     <h2>Wireless <br> Headphones</h2>
     <p>The Smarter way to listen</p>
     <h3>$139.00</h3>
     <a href="#">Shop Now</a>
-</section>
-
-<section id="cover">
-    <img id="back" src="images/headbluelarge.png" alt="Head Phone Blue Large">
 </section>
     
 </body>
