--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <img id="row3" onclick="clickwhite()" src="./images/headwhite.png" alt="Head Phone White">
     </div>
 
-    <div id="cover">
+    <div>
         <img id="back" src="images/headbluelarge.png" alt="Head Phone Blue Large">
     </div>
 </section>
